[gd_scene load_steps=12 format=2]

[ext_resource path="res://GameHUDRelated/RightSidePanel/RoundStartPanel/RoundInfoPanel_V2/RoundIndicatorPanel/Assets/RoundIndicator_Arrow.png" type="Texture" id=1]
[ext_resource path="res://GameHUDRelated/RightSidePanel/RoundStartPanel/RoundInfoPanel_V2/RoundIndicatorPanel/Assets/RoundIndicator_Background.png" type="Texture" id=2]
[ext_resource path="res://GameHUDRelated/RightSidePanel/RoundStartPanel/RoundInfoPanel_V2/RoundIndicatorPanel/Assets/RoundIndicator_Border.png" type="Texture" id=3]
[ext_resource path="res://GameHUDRelated/RightSidePanel/RoundStartPanel/RoundInfoPanel_V2/RoundIndicatorPanel/RoundIndicatorPanel.gd" type="Script" id=4]
[ext_resource path="res://GameHUDRelated/RightSidePanel/RoundStartPanel/RoundInfoPanel_V2/RoundIndicatorPanel/Assets/RoundIndicator_RoundIcon_NormalRound.png" type="Texture" id=5]
[ext_resource path="res://Fonts/consolas/CONSOLA.TTF" type="DynamicFontData" id=6]
[ext_resource path="res://GameHUDRelated/RightSidePanel/RoundStartPanel/RoundInfoPanel_V2/RoundIndicatorPanel/Assets/FirstEnemyDamageIcon.png" type="Texture" id=7]
[ext_resource path="res://GameHUDRelated/RightSidePanel/RoundStartPanel/RoundInfoPanel_V2/RoundIndicatorPanel/Assets/StrengthValueBorder_01.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]
size = 11
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=3]
size = 17
extra_spacing_top = -3
extra_spacing_bottom = -2
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
size = 11
extra_spacing_top = -3
extra_spacing_bottom = -2
font_data = ExtResource( 6 )

[node name="RoundIndicatorPanel" type="MarginContainer"]
margin_right = 110.0
margin_bottom = 58.0
script = ExtResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 110.0
margin_bottom = 58.0
custom_constants/separation = 0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 110.0
margin_bottom = 29.0
custom_constants/separation = 0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_right = 86.0
margin_bottom = 29.0
custom_constants/separation = 0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 86.0
margin_bottom = 29.0

[node name="MiddlePanel" type="MarginContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer/MarginContainer"]
margin_right = 86.0
margin_bottom = 29.0
rect_min_size = Vector2( 0, 29 )
custom_constants/margin_top = 3
custom_constants/margin_bottom = 3

[node name="Background" type="TextureRect" parent="VBoxContainer/HBoxContainer/VBoxContainer/MarginContainer/MiddlePanel"]
margin_top = 3.0
margin_right = 86.0
margin_bottom = 26.0
texture = ExtResource( 2 )
stretch_mode = 2

[node name="LeftBorder" type="TextureRect" parent="VBoxContainer/HBoxContainer/VBoxContainer/MarginContainer/MiddlePanel"]
margin_top = 3.0
margin_right = 2.0
margin_bottom = 26.0
size_flags_horizontal = 2
texture = ExtResource( 3 )
stretch_mode = 2

[node name="RightBorder" type="TextureRect" parent="VBoxContainer/HBoxContainer/VBoxContainer/MarginContainer/MiddlePanel"]
margin_left = 84.0
margin_top = 3.0
margin_right = 86.0
margin_bottom = 26.0
size_flags_horizontal = 10
texture = ExtResource( 3 )
stretch_mode = 2

[node name="TopBorder" type="TextureRect" parent="VBoxContainer/HBoxContainer/VBoxContainer/MarginContainer/MiddlePanel"]
margin_top = 3.0
margin_right = 86.0
margin_bottom = 5.0
size_flags_vertical = 2
texture = ExtResource( 3 )
stretch_mode = 2

[node name="BottomBorder" type="TextureRect" parent="VBoxContainer/HBoxContainer/VBoxContainer/MarginContainer/MiddlePanel"]
margin_top = 24.0
margin_right = 86.0
margin_bottom = 26.0
size_flags_vertical = 10
texture = ExtResource( 3 )
stretch_mode = 2

[node name="ContentPanel" type="MarginContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer/MarginContainer/MiddlePanel"]
margin_top = 3.0
margin_right = 86.0
margin_bottom = 26.0
rect_min_size = Vector2( 86, 23 )
rect_clip_content = true
custom_constants/margin_right = 3
custom_constants/margin_top = 3
custom_constants/margin_left = 3

[node name="RoundIconsPanel" type="Control" parent="VBoxContainer/HBoxContainer/VBoxContainer/MarginContainer/MiddlePanel/ContentPanel"]
margin_left = 3.0
margin_top = 3.0
margin_right = 83.0
margin_bottom = 23.0

[node name="RoundIcon01" type="TextureRect" parent="VBoxContainer/HBoxContainer/VBoxContainer/MarginContainer/MiddlePanel/ContentPanel/RoundIconsPanel"]
margin_right = 17.0
margin_bottom = 17.0
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RoundIcon02" type="TextureRect" parent="VBoxContainer/HBoxContainer/VBoxContainer/MarginContainer/MiddlePanel/ContentPanel/RoundIconsPanel"]
margin_left = 21.0
margin_right = 38.0
margin_bottom = 17.0
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RoundIcon03" type="TextureRect" parent="VBoxContainer/HBoxContainer/VBoxContainer/MarginContainer/MiddlePanel/ContentPanel/RoundIconsPanel"]
margin_left = 42.0
margin_right = 59.0
margin_bottom = 17.0
texture = ExtResource( 5 )

[node name="RoundIcon04" type="TextureRect" parent="VBoxContainer/HBoxContainer/VBoxContainer/MarginContainer/MiddlePanel/ContentPanel/RoundIconsPanel"]
margin_left = 63.0
margin_right = 80.0
margin_bottom = 17.0
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RoundIcon05" type="TextureRect" parent="VBoxContainer/HBoxContainer/VBoxContainer/MarginContainer/MiddlePanel/ContentPanel/RoundIconsPanel"]
margin_left = 84.0
margin_right = 101.0
margin_bottom = 17.0
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ArrowContainers" type="Control" parent="VBoxContainer/HBoxContainer/VBoxContainer/MarginContainer"]
margin_right = 86.0
margin_bottom = 29.0

[node name="ArrowTop" type="TextureRect" parent="VBoxContainer/HBoxContainer/VBoxContainer/MarginContainer/ArrowContainers"]
margin_right = 40.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ArrowBottom" type="TextureRect" parent="VBoxContainer/HBoxContainer/VBoxContainer/MarginContainer/ArrowContainers"]
margin_top = 23.0
margin_right = 40.0
margin_bottom = 29.0
texture = ExtResource( 1 )
flip_v = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 86.0
margin_right = 110.0
margin_bottom = 29.0
size_flags_vertical = 6

[node name="MiddlePanel2" type="MarginContainer" parent="VBoxContainer/HBoxContainer/MarginContainer"]
margin_right = 24.0
margin_bottom = 29.0
rect_min_size = Vector2( 0, 29 )
size_flags_horizontal = 3
custom_constants/margin_top = 3
custom_constants/margin_bottom = 3

[node name="Background" type="TextureRect" parent="VBoxContainer/HBoxContainer/MarginContainer/MiddlePanel2"]
margin_top = 3.0
margin_right = 24.0
margin_bottom = 26.0
texture = ExtResource( 2 )
stretch_mode = 2

[node name="LeftBorder" type="TextureRect" parent="VBoxContainer/HBoxContainer/MarginContainer/MiddlePanel2"]
margin_top = 3.0
margin_right = 2.0
margin_bottom = 26.0
size_flags_horizontal = 2
texture = ExtResource( 3 )
stretch_mode = 2

[node name="RightBorder" type="TextureRect" parent="VBoxContainer/HBoxContainer/MarginContainer/MiddlePanel2"]
margin_left = 22.0
margin_top = 3.0
margin_right = 24.0
margin_bottom = 26.0
size_flags_horizontal = 10
texture = ExtResource( 3 )
stretch_mode = 2

[node name="TopBorder" type="TextureRect" parent="VBoxContainer/HBoxContainer/MarginContainer/MiddlePanel2"]
margin_top = 3.0
margin_right = 24.0
margin_bottom = 5.0
size_flags_vertical = 2
texture = ExtResource( 3 )
stretch_mode = 2

[node name="BottomBorder" type="TextureRect" parent="VBoxContainer/HBoxContainer/MarginContainer/MiddlePanel2"]
margin_top = 24.0
margin_right = 24.0
margin_bottom = 26.0
size_flags_vertical = 10
texture = ExtResource( 3 )
stretch_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer/MarginContainer/MiddlePanel2"]
margin_top = 3.0
margin_right = 24.0
margin_bottom = 26.0
custom_constants/margin_right = 3
custom_constants/margin_top = 1
custom_constants/margin_left = 3

[node name="StageroundLabel" type="Label" parent="VBoxContainer/HBoxContainer/MarginContainer/MiddlePanel2/MarginContainer"]
margin_left = 3.0
margin_top = 1.0
margin_right = 21.0
margin_bottom = 23.0
size_flags_vertical = 1
custom_colors/font_color = Color( 0.866667, 0.866667, 0.866667, 1 )
custom_fonts/font = SubResource( 1 )
text = "0-1"
valign = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 29.0
margin_right = 110.0
margin_bottom = 58.0
mouse_filter = 2

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer/HBoxContainer2"]
margin_right = 37.0
margin_bottom = 29.0
mouse_filter = 2
size_flags_horizontal = 2
size_flags_vertical = 6

[node name="MiddlePanel2" type="MarginContainer" parent="VBoxContainer/HBoxContainer2/MarginContainer3"]
margin_right = 37.0
margin_bottom = 29.0
rect_min_size = Vector2( 0, 29 )
mouse_filter = 2
size_flags_horizontal = 3
custom_constants/margin_top = 3

[node name="Background" type="TextureRect" parent="VBoxContainer/HBoxContainer2/MarginContainer3/MiddlePanel2"]
margin_top = 3.0
margin_right = 37.0
margin_bottom = 29.0
mouse_filter = 2
texture = ExtResource( 2 )
stretch_mode = 2

[node name="LeftBorder" type="TextureRect" parent="VBoxContainer/HBoxContainer2/MarginContainer3/MiddlePanel2"]
margin_top = 3.0
margin_right = 2.0
margin_bottom = 29.0
mouse_filter = 2
size_flags_horizontal = 2
texture = ExtResource( 3 )
stretch_mode = 2

[node name="RightBorder" type="TextureRect" parent="VBoxContainer/HBoxContainer2/MarginContainer3/MiddlePanel2"]
margin_left = 35.0
margin_top = 3.0
margin_right = 37.0
margin_bottom = 29.0
mouse_filter = 2
size_flags_horizontal = 10
texture = ExtResource( 3 )
stretch_mode = 2

[node name="TopBorder" type="TextureRect" parent="VBoxContainer/HBoxContainer2/MarginContainer3/MiddlePanel2"]
margin_top = 3.0
margin_right = 37.0
margin_bottom = 5.0
mouse_filter = 2
size_flags_vertical = 2
texture = ExtResource( 3 )
stretch_mode = 2

[node name="BottomBorder" type="TextureRect" parent="VBoxContainer/HBoxContainer2/MarginContainer3/MiddlePanel2"]
margin_top = 27.0
margin_right = 37.0
margin_bottom = 29.0
mouse_filter = 2
size_flags_vertical = 10
texture = ExtResource( 3 )
stretch_mode = 2

[node name="FirstEnemyDamageContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer2/MarginContainer3/MiddlePanel2"]
margin_top = 3.0
margin_right = 37.0
margin_bottom = 29.0
custom_constants/margin_right = 5
custom_constants/margin_top = 1
custom_constants/margin_left = 5

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer2/MarginContainer3/MiddlePanel2/FirstEnemyDamageContainer"]
margin_left = 5.0
margin_top = 1.0
margin_right = 32.0
margin_bottom = 26.0
mouse_filter = 2

[node name="FirstEnemyDamageLabel" type="Label" parent="VBoxContainer/HBoxContainer2/MarginContainer3/MiddlePanel2/FirstEnemyDamageContainer/HBoxContainer"]
margin_right = 12.0
margin_bottom = 25.0
rect_min_size = Vector2( 0, 25 )
size_flags_vertical = 1
custom_colors/font_color = Color( 0.866667, 0.866667, 0.866667, 1 )
custom_fonts/font = SubResource( 1 )
text = "00"
align = 1
valign = 1

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer2/MarginContainer3/MiddlePanel2/FirstEnemyDamageContainer/HBoxContainer"]
margin_left = 16.0
margin_top = 5.0
margin_right = 27.0
margin_bottom = 20.0
mouse_filter = 2
size_flags_vertical = 6
texture = ExtResource( 7 )

[node name="MarginContainerSV" type="MarginContainer" parent="VBoxContainer/HBoxContainer2"]
visible = false
margin_left = 41.0
margin_right = 74.0
margin_bottom = 29.0
size_flags_horizontal = 2
size_flags_vertical = 2
custom_constants/margin_top = 2
custom_constants/margin_left = 6

[node name="SVArt" type="TextureRect" parent="VBoxContainer/HBoxContainer2/MarginContainerSV"]
margin_left = 6.0
margin_top = 2.0
margin_right = 33.0
margin_bottom = 29.0
mouse_filter = 0
texture = ExtResource( 8 )

[node name="TextMarginer" type="MarginContainer" parent="VBoxContainer/HBoxContainer2/MarginContainerSV"]
margin_left = 6.0
margin_top = 2.0
margin_right = 33.0
margin_bottom = 29.0
mouse_filter = 2
custom_constants/margin_left = 0

[node name="SVLabel" type="Label" parent="VBoxContainer/HBoxContainer2/MarginContainerSV/TextMarginer"]
margin_top = 7.0
margin_right = 27.0
margin_bottom = 20.0
custom_colors/font_color = Color( 0.866667, 0.866667, 0.866667, 1 )
custom_fonts/font = SubResource( 3 )
text = "1"
align = 1

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer/HBoxContainer2"]
margin_left = 84.0
margin_right = 110.0
margin_bottom = 29.0
mouse_filter = 2
size_flags_horizontal = 10
size_flags_vertical = 6

[node name="MiddlePanel2" type="MarginContainer" parent="VBoxContainer/HBoxContainer2/MarginContainer2"]
margin_right = 26.0
margin_bottom = 29.0
rect_min_size = Vector2( 0, 29 )
mouse_filter = 2
size_flags_horizontal = 3
custom_constants/margin_top = 3

[node name="Background" type="TextureRect" parent="VBoxContainer/HBoxContainer2/MarginContainer2/MiddlePanel2"]
margin_top = 3.0
margin_right = 26.0
margin_bottom = 29.0
mouse_filter = 2
texture = ExtResource( 2 )
stretch_mode = 2

[node name="LeftBorder" type="TextureRect" parent="VBoxContainer/HBoxContainer2/MarginContainer2/MiddlePanel2"]
margin_top = 3.0
margin_right = 2.0
margin_bottom = 29.0
mouse_filter = 2
size_flags_horizontal = 2
texture = ExtResource( 3 )
stretch_mode = 2

[node name="RightBorder" type="TextureRect" parent="VBoxContainer/HBoxContainer2/MarginContainer2/MiddlePanel2"]
margin_left = 24.0
margin_top = 3.0
margin_right = 26.0
margin_bottom = 29.0
mouse_filter = 2
size_flags_horizontal = 10
texture = ExtResource( 3 )
stretch_mode = 2

[node name="TopBorder" type="TextureRect" parent="VBoxContainer/HBoxContainer2/MarginContainer2/MiddlePanel2"]
margin_top = 3.0
margin_right = 26.0
margin_bottom = 5.0
mouse_filter = 2
size_flags_vertical = 2
texture = ExtResource( 3 )
stretch_mode = 2

[node name="BottomBorder" type="TextureRect" parent="VBoxContainer/HBoxContainer2/MarginContainer2/MiddlePanel2"]
margin_top = 27.0
margin_right = 26.0
margin_bottom = 29.0
mouse_filter = 2
size_flags_vertical = 10
texture = ExtResource( 3 )
stretch_mode = 2

[node name="RoundsCountContaner" type="MarginContainer" parent="VBoxContainer/HBoxContainer2/MarginContainer2/MiddlePanel2"]
margin_top = 3.0
margin_right = 26.0
margin_bottom = 29.0
custom_constants/margin_right = 3
custom_constants/margin_top = 1
custom_constants/margin_left = 3

[node name="RoundsCountLabel" type="Label" parent="VBoxContainer/HBoxContainer2/MarginContainer2/MiddlePanel2/RoundsCountContaner"]
margin_left = 3.0
margin_top = 1.0
margin_right = 23.0
margin_bottom = 26.0
rect_min_size = Vector2( 20, 25 )
size_flags_horizontal = 6
size_flags_vertical = 6
custom_colors/font_color = Color( 0.866667, 0.866667, 0.866667, 1 )
custom_fonts/font = SubResource( 2 )
text = "xx
xx"
align = 1
valign = 1

[connection signal="mouse_entered" from="VBoxContainer/HBoxContainer2/MarginContainer3/MiddlePanel2/FirstEnemyDamageContainer" to="." method="_on_FirstEnemyDamageContainer_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/HBoxContainer2/MarginContainer3/MiddlePanel2/FirstEnemyDamageContainer" to="." method="_on_FirstEnemyDamageContainer_mouse_exited"]
[connection signal="mouse_entered" from="VBoxContainer/HBoxContainer2/MarginContainerSV/SVArt" to="." method="_on_SVArt_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/HBoxContainer2/MarginContainerSV/SVArt" to="." method="_on_SVArt_mouse_exited"]
[connection signal="mouse_entered" from="VBoxContainer/HBoxContainer2/MarginContainer2/MiddlePanel2/RoundsCountContaner" to="." method="_on_RoundsCountContaner_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/HBoxContainer2/MarginContainer2/MiddlePanel2/RoundsCountContaner" to="." method="_on_RoundsCountContaner_mouse_exited"]
